--- a/public/css/CustomerProfile.css
+++ b/public/css/CustomerProfile.css
@@ -10,7 +10,7 @@ a{
 	text-decoration:none;
 }
 .nav-bar{
-	opacity:.6;
+	opacity:0.8;
 	position:fixed;
 	background-color:rgb(252, 252, 252);
 	height:60px;
@@ -108,8 +108,8 @@ a{
 }
 
 .button {
-    background-color: #15205391; /* Green */
-    border-radius: 6px;
+    background-color: #152053ea; /* Green */
+    border-radius: 4px;
     border: none;
     color: white;
     padding: 12px 25px;
@@ -130,7 +130,7 @@ a{
 
 .data-panel{
     position: absolute;
-    padding-top: 110px;
+    padding-top: 180px;
     margin-left: 15%;
     margin-bottom:5%;
     width: 70%; 
@@ -156,13 +156,9 @@ a{
     text-align: center;
     font-family: 'Questrial', sans-serif;
     color: #1c2233;
-    opacity: 0.7;
+    opacity: 0.9;
     padding-top: 10%;
     padding-bottom:12%;
-}
-
-.show-data{
-    
 }
 
 
@@ -187,19 +183,15 @@ a{
     margin-top:2%;
  }
 
-
-
 .edit-data{
     display:none;
 }
-
 
 #name-icon{
     color:#152053c5;
     margin-left:9%; 
     font-size: 40px;
     margin-right: 5%;
-    opacity:0.9;
  
 }
 
@@ -209,7 +201,6 @@ a{
     font-size: 35px;
     margin-right: 5%;
     padding-left: 5px;
-    opacity:0.9;
 }
 
 
@@ -219,7 +210,6 @@ a{
     font-size: 55px;
     margin-right: 6%;
     padding-left: 10px;
-    opacity:0.9;
 }
 
 #name-input{
@@ -262,7 +252,7 @@ a{
 .radio-container {
    display: block;
     position: relative;
-    padding-left: 20%;
+    padding-left: 15%;
     margin-bottom: 12px;
     margin-right:11%;
     cursor: pointer;
@@ -294,12 +284,16 @@ a{
 }
 
 /* On mouse-over, add a grey background color */
-.radio-container:hover input ~ .checkmark {
+.edit-data .radio-container:hover input ~ .checkmark {
     background-color: #ccc;
 }
 
 /* When the radio button is checked, add a blue background */
-.radio-container input:checked ~ .checkmark {
+.edit-data .radio-container input:checked ~ .checkmark {
+    background-color: rgba(13, 6, 75, 0.726);
+}
+
+.show-data .radio-container input:checked ~ .checkmark {
     background-color: rgba(13, 6, 75, 0.726);
 }
 
@@ -365,7 +359,6 @@ a{
     margin-left:9%; 
     font-size: 40px;
     margin-right: 5%;
-    opacity:0.9;
  
 }
 
@@ -376,6 +369,30 @@ a{
     padding-left: 10px;
 }
 
+.add-address-icon{
+    position: relative;
+    top:10px;
+    left:45px;
+    width:30px;
+    height:36px;
+    opacity: 0.8;
+}
+
+.remove-address-icon{
+    margin-top:5px;
+    margin-left:8px;
+    height:30px;
+}
+
+#new-address-command{
+    position: relative;
+    top:4px;
+    left:65px;
+    font-size:22px;
+    font-family: 'Muli', sans-serif;
+    color: #1c2233;
+    opacity: 0.9;
+}
 .edit-addresses{
     display:none;
 }
@@ -467,12 +484,14 @@ a{
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
     }
 
+
     .basic-data{
         background-color: rgba(253, 253, 253, 0.534);
         width:80%;
         margin-right: 10%;
         margin-left:10%;
         margin-top: 2%;
+        margin-bottom: 50px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
     }
     
