--- a/public/css/homepageStyle.css
+++ b/public/css/homepageStyle.css
@@ -97,17 +97,25 @@ a{
 	color:#FFD200;
 }
 
+
+
 #logo{
 	position:absolute;
 	float :left;
-	width:120px;
-	height:120px;
-	left:10%;
-	transition:all .2s ease 0s; 
+	width:90px;
+	left:7%;
 	z-index:1;
-	border :2px solid #233444;
-	top:20px;
+	top:2px;
 	opacity:1;
+}
+#minilogo{
+        position:absolute;
+        float :left;
+        width:140px;
+		left:80px;
+        z-index:1;
+        top:8px;
+        opacity:0;
 }
 
 #Login-nav, #Signup-nav{
@@ -184,12 +192,13 @@ span{
 .how-it-works {
 	display:inline-block;
 	width:10%;
+	top:0px;
 	margin-right:4%;
 	margin-left:4%;
-	height:180px;
+	height:200px;
 	cursor:pointer;
 	opacity:0.6;
-	transition: all .3s ease 0s; 
+	transition: opacity .2s ease 0s; 
 
 }
 .how-it-works:hover{
@@ -199,6 +208,7 @@ span{
 #how-it-works-container h4{
 font-family: 'Oswald', sans-serif;
 }
+
 #how-it-works-container{
 top:60px;
 position:relative;
@@ -276,21 +286,21 @@ border-bottom:1px #FFD200 solid;
 .footer{
 	top:0;
 	width:100%;
-	height:600px;
+	height:250px;
 	position:relative;
 }
 #footer_left{
 	position:absolute;
-	background-color: #233444;
-	width:50%;
+	background-color: #233444e7;
+	width:70%;
 	height:100%;
 }
 #footer_right{
 	position:absolute;
-	background-color: #233444;;
-	width:50%;
+	background-color: #233444f3;
+	width:30%;
 	height:100%;
-	left:50%;
+	left:70%;
 }
 #Login_form_div{
 	
