--- a/public/css/RegisterPage.css
+++ b/public/css/RegisterPage.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Cairo|Oswald|Titillium+Web|Ubuntu');
 body{
-  
     background-color:#ddd;
     margin-top:0px;
 }
@@ -61,10 +60,17 @@ h1{
     padding-top:50px;
     font-family:Ubuntu;
 }
-.add{
+.add  {
     position:relative;
     top:22px;
     left:10px;
-    width:56px;
-    height:56px;
+    width:40px;
+    height:40px;
+    border-radius:28px;
+    border:4px solid black ;
+    opacity:0.8;
+    transition: all .2s ease 0s;
+}
+.add:hover{
+   opacity:0.9;
 }
