--- a/public/css/CustomerProfile.css
+++ b/public/css/CustomerProfile.css
@@ -142,10 +142,11 @@ a{
     position: relative;
     background-color: rgba(253, 253, 253, 0.534);
     width:40%;
-    margin-right: 2%;
-    margin-left:10%;
+    margin-right: 4%;
+    margin-left:8%;
     margin-top: 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
+    padding-bottom: 60px;
 }
 
 
