--- a/public/css/ReservationPage.css
+++ b/public/css/ReservationPage.css
@@ -1,3 +1,184 @@
+@import url('https://fonts.googleapis.com/css?family=Cairo|Oswald|Titillium+Web|Ubuntu');
+@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
 body{
     width:100%;
+    position:relative;
+    margin:0px!important;
+}
+#main-wrapper{
+    position:relative;
+    top:60px;
+    width:100%;
+
+}
+#form-navigation-bar{
+position:fixed;
+top:100px;
+width:20%;
+
+
+}
+.form-navigation-bar-button{
+display:block;
+height:70px;
+width:90%;
+color:black;
+background-color: #F8F8F8;
+font-size:22px;
+margin-left:4%;
+margin-top:4%;
+border:0px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+font-family: 'Droid Arabic Kufi', serif;
+transition:all .3s ease 0s;
+}
+.form-navigation-bar-button:hover{
+    cursor:pointer;
+    box-shadow: 0px 8px 15px rgba(51, 50, 50, 0.3);
+    width:93%;
+}
+#refubrishment-categories-list{
+    display:none;
+}
+.refubrishment-button{
+    height:40px;
+    width:70%;
+    display:block;
+    color:black;
+    background-color: #F8F8F8;
+    font-size:18px;
+    margin-left:8%;
+    margin-top:2%;
+    border:0px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    font-family: 'Droid Arabic Kufi', serif;
+    transition:all .3s ease 0s;
+}
+.refubrishment-button:hover{
+    cursor:pointer;
+    box-shadow: 0px 8px 15px rgba(51, 50, 50, 0.3);
+    width:72%;
+}
+#main-wrapper form{
+    position:absolute;
+    left:20%;
+    width:57%;
+    margin-left:.2%;
+    margin-right:2%;
+    margin-top:2%;
+    height:500px;
+    background-color: rgb(170, 147, 147);
+    font-family: 'Droid Arabic Kufi', serif;
+
+}
+#cost-estimation-div{
+    text-align:center;
+    width:13%;
+    padding:3%;
+    height:300px;
+    position:fixed;
+    top:100px;
+    right:2%;
+    background-color: #F8F8F8;
+}
+.form-tab{
+    position:absolute;
+    left:10%;
+    width:80%;
+    height:250px;
+    font-size:15px;
+}
+.form-tab label,.form-tab input{
+    font-size:15px;
+    font-family: 'Droid Arabic Kufi', serif;
+
+}
+.form-tab input{
+    resize: none;
+    overflow:auto;
+}
+#submit-button{
+    position:absolute;
+    left:10%;
+    width:80%;
+	height:60px;
+	font-size:18px;
+	background-color: #233444;
+	color:white;
+	cursor:pointer;
+	border:0px;
+	font-family:Cairo;
+	transition:all .3s ease 0s;
+}
+#submit-button:disabled{
+    background-color: #0978e0;
+}
+
+
+
+
+
+/*radiobutton layout */
+
+
+.container {
+    position: relative;
+    display:inline-block;
+    padding-right: 35px;
+    margin-bottom: 12px;
+    margin-left:30px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 25px;
+    width: 25px;
+    margin-top:0px!important;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+
+
+
+/* layout el div elly feh el radiobuttons*/
+.radio-options-div{
+    text-align:right;
+}
+.add-note-box{
+  display:inline-block;
+  height:30px;
+  width:150px;
+  text-align:right;
+  padding-right:25px;
+  transition:all .4s ease 0s;
+}
+.add-note-box:focus{
+    width:200px;
 }
