--- a/public/css/ReservationPage.css
+++ b/public/css/ReservationPage.css
@@ -11,6 +11,33 @@ body{
     width:100%;
 
 }
+
+#form-navigation-bar{
+    position:fixed;
+    top:100px;
+    width:20%;
+    
+    
+    }
+    .form-navigation-bar-button{
+    display:block;
+    height:70px;
+    width:90%;
+    color:black;
+    background-color: #F8F8F8;
+    font-size:22px;
+    margin-left:4%;
+    margin-top:4%;
+    border:0px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    font-family: 'Droid Arabic Kufi', serif;
+    transition:all .3s ease 0s;
+    }
+    .form-navigation-bar-button:hover{
+        cursor:pointer;
+        box-shadow: 0px 8px 15px rgba(51, 50, 50, 0.3);
+        width:93%;
+    }
 #refubrishment-categories-list{
     display:none;
 }
