--- a/public/css/fetchRequests.css
+++ b/public/css/fetchRequests.css
@@ -8,15 +8,17 @@
     margin-top:20px;
     font-size:20px;
     font-family: Cairo !important;
-    border:1px solid black;
+    background-color: rgb(223, 222, 222);
+    border-radius:25px;
     margin-bottom:20px;
+    padding:30px;
 }
 .accept-button{
     width:100px;
     height:45px;
     font-size:17px;
     position:absolute;
-    left:75%;
+    right:130px;
     bottom:15px;
     color:rgb(229, 236, 240);
     background-color: rgb(21, 129, 21);
@@ -34,7 +36,7 @@
     height:45px;
     font-size:17px;
     position:absolute;
-    right:1%;
+    right:20px;
     bottom:15px;
     color:rgb(229, 236, 240);
     background-color: rgb(168, 52, 44);
