--- a/public/css/ReservationPage.css
+++ b/public/css/ReservationPage.css
@@ -217,3 +217,17 @@ body{
 .add-note-box:focus{
     width:200px;
 }
+.show-profile{
+    width:80px;
+    font-size:12px;
+    height:20px;
+    background-color:rgba(42, 42, 44, 0.925);
+    color:rgba(226, 228, 229, 0.945);
+    border:0px;
+    padding-left:5px;
+    padding-right:5px;
+    transition:all .2s ease 0s;
+}
+.show-profile:hover{
+    cursor:pointer;
+}
