--- a/public/css/fetchRequests.css
+++ b/public/css/fetchRequests.css
@@ -8,7 +8,7 @@
     margin-top:20px;
     font-size:20px;
     font-family: Cairo !important;
-    background-color: rgb(223, 222, 222);
+    background-color: rgba(246, 245, 247, 0.966);
     border-radius:25px;
     margin-bottom:20px;
     padding:30px;
