--- a/public/css/workerprofile.css
+++ b/public/css/workerprofile.css
@@ -107,9 +107,9 @@ a{
 }
 .main-container{
     padding-top: 110px;
-    margin-left: 12%;
     margin-right: 12%;
     margin-bottom:5%;
+    width:100%;
     display: inline-flex;
 }
 
@@ -119,7 +119,7 @@ a{
     width:22%;
     margin-right: 5%;
     margin-left: 2%;
-    margin-top: 2%;
+    margin-top: 0;
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 8px 24px 0 rgba(0, 0, 0, 0.29);
 }
 
@@ -229,8 +229,7 @@ a{
 .profile{
    
     width:70%;
-    margin-right: 5%;
-    margin-left: 37%;
+    margin-left: 25%;
     display:block;
     background-color: rgba(252, 252, 252, 0.795);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0 rgba(0, 0, 0, 0.19);
