--- a/public/css/workerprofile.css
+++ b/public/css/workerprofile.css
@@ -356,6 +356,29 @@ background-color: rgb(235, 235, 235);
 	height:100%;
 	left:50%;
 }
+#comment-form{
+    width:80%;
+    margin-left:5%;
+    padding:20px;    
+    position:relative;
+}
+#comment-form input[type="text"]{
+    width:70%;
+    height:35px;
+    margin-bottom:30px;
+    padding-left:10px;
+}
+
+#comment-form input[type="submit"]{
+    position:absolute;
+    right:15%;
+    width:80px;
+    height:35px;
+    background-color:#233444;
+    color:white;
+    border:0px;
+    margin-bottom:30px;
+}
 @media screen and (max-width: 1100px) {
 
 .collapse-item{
