--- a/public/css/workerprofile.css
+++ b/public/css/workerprofile.css
@@ -463,3 +463,113 @@ background-color: rgb(235, 235, 235);
     
 }
 
+
+
+
+
+  
+  .clearfix {
+    clear:both;
+  }
+  
+  .text-center {text-align:center;}
+  
+
+  
+  pre {
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: #F5F5F5;
+  border: 1px solid #CCC;
+  border-radius: 4px;
+  }
+  
+  .new-react-version {
+    padding: 20px 20px;
+    border: 1px solid #eee;
+    border-radius: 20px;
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.1);
+    
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.7;
+  }
+  
+ 
+  
+  
+  
+  
+  .success-box {
+    margin:50px 0;
+    padding:10px 10px;
+    border:1px solid #eee;
+    background:#f9f9f9;
+  }
+  
+  .success-box img {
+    margin-right:10px;
+    display:inline-block;
+    vertical-align:top;
+  }
+  
+  .success-box > div {
+    vertical-align:top;
+    display:inline-block;
+    color:#888;
+  }
+  
+  
+  .rating-widget{
+      position:relative;
+  }
+  /* Rating Star Widgets Style */
+  .rating-stars ul {
+    list-style-type:none;
+    padding:0;
+    position:absolute;
+    left:45%;
+    
+    -moz-user-select:none;
+    -webkit-user-select:none;
+  }
+  .rating-stars ul > li.star {
+    display:inline-block;
+    
+  }
+  
+  /* Idle State of the stars */
+  .rating-stars ul > li.star > i.fa {
+    font-size:2.5em; /* Change the size of the stars */
+    color:#ccc; /* Color on idle state */
+  }
+  
+  /* Hover state of the stars */
+  .rating-stars ul > li.star.hover > i.fa {
+    color:#FFCC36;
+  }
+  
+  /* Selected state of the stars */
+  .rating-stars ul > li.star.selected > i.fa {
+    color:#FF912C;
+  }
+  .success-box{
+      padding:20px;
+  }
+  #submitRate{
+      position:absolute;
+      bottom:10px;
+      right:50px;
+      width:120px;
+      height:35px;
+      background-color:#233444;
+      color:white;
+      border:0px;
+  }
+  
