Last-minute changes
- Developed Reservation Gui
- Edited some Gui mistakes in admin dashboard
-admin auth modified for more security

--- a/public/css/fetchPendingReservations.css
+++ b/public/css/fetchPendingReservations.css
@@ -37,9 +37,9 @@ hr{
     margin:0px;
     margin-left:20%;
 }
-.accept-button{
+#accept{
     left:50px;
 }
-.reject-button{
+#reject{
     left:150px;
 }
