--- a/public/css/ReservationPage.css
+++ b/public/css/ReservationPage.css
@@ -66,9 +66,7 @@ body{
     width:57%;
     margin-left:.2%;
     margin-right:2%;
-    margin-top:2%;
-    height:500px;
-    background-color: rgb(170, 147, 147);
+    height:auto;
     font-family: 'Droid Arabic Kufi', serif;
 
 }
@@ -86,8 +84,10 @@ body{
     position:absolute;
     left:10%;
     width:80%;
-    height:250px;
     font-size:15px;
+    background-color:rgb(240, 238, 238);
+    padding:30px;
+    margin-bottom:50px;
 }
 .form-tab label,.form-tab input{
     font-size:15px;
@@ -112,7 +112,7 @@ body{
 	transition:all .3s ease 0s;
 }
 #submit-button:disabled{
-    background-color: #0978e0;
+    background-color: #d8dadb;
 }
 
 
@@ -139,7 +139,6 @@ body{
 .container-img {
     position: relative;
     display:inline-block;
-    padding-right: 35px;
     margin-bottom: 12px;
     margin-left:30px;
     cursor: pointer;
@@ -149,20 +148,26 @@ body{
     -ms-user-select: none;
     user-select: none;
     float:right;
-    
+    border:1px solid rgb(192, 184, 184);
+    width:180px;
     
 }
 .container-img h4{
     margin-top:0px !important;
     margin-bottom:0px!important;
+    font-family:Cairo!important;
+    text-align:center;
 }
+
+
 .radio-options-div-img{
     height:350px;
 }
 .radiobutton-img{
     width:150px;
     height:200px;
-}
+    margin-left:15px;
+    }
 .radiobutton-img:hover{
 }
 /* Hide the browser's default radio button */
@@ -185,18 +190,18 @@ body{
     height: 25px;
     width: 25px;
     margin-top:0px!important;
-    background-color: #eee;
+    background-color: rgb(196, 196, 196);
     border-radius: 50%;
 }
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
-    background-color: #ccc;
+    background-color: rgb(111, 106, 136);
 }
 
 /* When the radio button is checked, add a blue background */
 .container input:checked ~ .checkmark {
-    background-color: #2196F3;
+    background-color: #233444;
 }
 
 
@@ -227,7 +232,16 @@ body{
     padding-left:5px;
     padding-right:5px;
     transition:all .2s ease 0s;
+    margin-left:55px;
+    font-family:Cairo;
 }
 .show-profile:hover{
     cursor:pointer;
+}
+form h1{
+    font-family:Cairo;
+    padding-left:80px;
+}
+.clearfix{
+    clear:both;
 }
