--- a/public/css/NavBar.css
+++ b/public/css/NavBar.css
@@ -143,7 +143,7 @@ a{
 	padding-left:20px;
 	opacity:1 !important;
 }
-#JoinUs_form input{
+#JoinUs_form input[type="text"]{
 	padding-left:20px;
 	opacity:1 !important;
 	margin:2%;
@@ -231,4 +231,8 @@ form a{
     position:relative;
     margin:auto;
 }
+}
+.profession{
+	width:100px;
+	height:50px;
 }
