--- a/public/css/fetchQuestions.css
+++ b/public/css/fetchQuestions.css
@@ -7,7 +7,7 @@
 }
 .option_box{
     width:150px;
-    height:150px;
+    height:140px;
     margin-right:30px;
     margin-top:50px;
     background-color: rgba(71, 71, 69, 0.911);
@@ -42,4 +42,12 @@
 .ques_div{
     width:100%!important;
     height:60px;
+}
+.submitQues{
+position:absolute;
+left:50px;
+bottom:10px;
+width:150px;
+height:35px;
+border:0px;
 }
