--- a/public/css/ReservationPage.css
+++ b/public/css/ReservationPage.css
@@ -5,11 +5,19 @@ body{
     position:relative;
     margin:0px!important;
 }
+.nav-bar{position:relative;
+top:0px;}
+#Login_form{
+    top:0%;
+}
+#JoinUs_form_div{
+    top:-1000px;
+
+}
 #main-wrapper{
     position:relative;
     top:60px;
     width:100%;
-
 }
 
 #form-navigation-bar{
@@ -21,7 +29,7 @@ body{
     }
     .form-navigation-bar-button{
     display:block;
-    height:70px;
+    height:65px;
     width:90%;
     color:black;
     background-color: #F8F8F8;
@@ -118,7 +126,6 @@ body{
 
 
 
-
 /*radiobutton layout */
 
 
@@ -161,7 +168,7 @@ body{
 
 
 .radio-options-div-img{
-    height:350px;
+    height:auto;
 }
 .radiobutton-img{
     width:150px;
@@ -241,6 +248,88 @@ body{
 form h1{
     font-family:Cairo;
     padding-left:80px;
+}
+.clearfix{
+    clear:both;
+}
+
+
+#workers_div{
+position:absolute;
+top:800px;
+left:25%;
+}
+
+
+
+
+
+
+@media screen and (max-width:1200px){
+    #form-navigation-bar{
+        width:95%;
+        left:2.5%;
+        top:10px;
+        position:absolute;
+    }
+    
+    .form-navigation-bar-button{
+        display:inline-block;
+        height:35px;
+        width:20%;
+        
+        margin-left:4%;
+        margin-top:2.5%;
+       font-size:10px;
+        }
+        
+    .form-navigation-bar-button:hover{
+        cursor:pointer;
+        box-shadow: 0px 8px 15px rgba(51, 50, 50, 0.3);
+        width:20%;
+    }
+    
+.refubrishment-button{
+    height:20px;
+    width:20%;
+    display:inline-block;
+    
+    font-size:8px;
+    margin-left:2.5%;
+    margin-top:1%;
+    
+}
+#cost-estimation-div{
+    text-align:center;
+    position:absolute;
+    width:90%;
+    padding:3%;
+    margin-top:30px;
+    right:2.5%;
+    font-size:15px;
+    height:250px;
+}
+ h1{
+    width:100%;
+    font-size:15px;
+    text-align:center;
+}
+
+.form-tab{
+
+    width:80%;
+    margin-top:400px;
+    font-size:15px;
+    margin-bottom:50px;
+}
+#main-wrapper form{
+    left:0%;
+    width:80%;
+    margin-left:5%;
+    margin-right:5%;
+    height:auto;
+
+}
 }
 .clearfix{
     clear:both;
