--- a/public/css/NavBar.css
+++ b/public/css/NavBar.css
@@ -24,7 +24,7 @@ a{
 	opacity:0.9;
 }
 .nav-bar ul{
-	padding-right:50px;
+	padding-right:25px;
 	overflow: hidden;
 	display:block;
 	list-style:none;
@@ -51,8 +51,8 @@ a{
 	padding-top:30px;
 	font-size:20px;
 	color:#233444;
-	margin-right:20px;
-	margin-left:20px;
+	margin-right:10px;
+	margin-left:10px;
 	
 }
 .nav-bar li a:hover{
@@ -106,11 +106,19 @@ a{
 	display:block;
 	margin-top:15px;
 }
+
+
+span{
+	background-color:black;
+	height:1px;
+	width:40px;
+	display:block;
+	margin-top:15px;
+}
 .collapse-item{
 	float:right;
 	display:none;
 }
-
 
 .Homepage_Form_div{
 	
@@ -182,7 +190,40 @@ form a{
 }
 
 
+.footer{
+	top:0;
+	width:100%;
+	height:250px;
+	position:relative;
+}
+#footer_left{
+	position:absolute;
+	background-color: #233444e7;
+	width:70%;
+	height:100%;
+}
+#footer_right{
+	position:absolute;
+	background-color: #233444f3;
+	width:30%;
+	height:100%;
+	left:70%;
+}
+
+#back-to-top{
+	font-size:100px;
+	padding-left:43%;
+	padding-top:60px;
+	color:white;
+	cursor:pointer;
+}
+
+
+
 @media screen and (max-width: 1200px) {
+	.nav-bar{
+		position:absolute;
+	}
 .collapse-item{
     cursor:pointer;
     display:block;
@@ -202,7 +243,14 @@ form a{
 .nav-bar.collapsed li{
     padding-top:0px;
     display:block;
-    height:60px;
+    height:40px;
+}
+
+.nav-bar.collapsed li a{
+	padding-top:0px;
+	font-size:13px !important;
+    display:block;
+    height:40px;
 }
 .nav-bar.collapsed{
     transition:all .6s ease 0s; 
@@ -214,7 +262,7 @@ form a{
  #logo{
     position:relative;
     margin:auto;
-    left:35%;
+	left:40%;
 }
 #logoLink{
     position:relative;
@@ -236,3 +284,5 @@ form a{
 	width:100px;
 	height:50px;
 }
+
+
