--- a/public/css/RegisterPage.css
+++ b/public/css/RegisterPage.css
@@ -4,12 +4,11 @@ body{
     margin-top:0px;
 }
 .main-container{
-    top:600;
     background-color:white;
     margin-left:20%;
     width:60%;
     position:relative;
-    margin-top:0;
+    margin-top:80px;
 }
 .signup_form{
     position:relative;
